--- a/groundwater_modeling.ipynb
+++ b/groundwater_modeling.ipynb
@@ -8,11 +8,15 @@
       "source": [
         "# Installation\n",
         "*   ModelMuse (Graphical user interface - GUI): https://www.usgs.gov/software/modelmuse-a-graphical-user-interface-groundwater-models\n",
-        "     <img src=\"images\\modelmuse_download.png\" align=\"left\" width=\"600\" />\n",
-        "\n",
-        "\n",
-        "*   Modflow: https://www.usgs.gov/software/modflow-6-usgs-modular-hydrologic-model\n",
-        "     <img src=\"images\\modflow_download.png\" align=\"left\" width=\"600\" />\n"
+        "*   Modflow: https://www.usgs.gov/software/modflow-6-usgs-modular-hydrologic-model "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"images\\modelmuse_download.png\" align=\"left\" width=\"600\" />\n",
+        "<img src=\"images\\modflow_download.png\" align=\"left\" width=\"600\" />"
       ]
     },
     {
